fix: footer information

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -33,8 +33,8 @@
         <div class="col-6 col-md-4 mb-4">
             <h5 class="text-primary">Contato</h5>
             <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a href="mailto:wagner@aiexxplererr.com" class="nav-link p-0 text-muted">
-                    <i class="bi bi-envelope"></i> wagner@aiexxplererr.com
+                <li class="nav-item mb-2"><a href="mailto:aiexxplorer@artificialuniverse.tech" class="nav-link p-0 text-muted">
+                    <i class="bi bi-envelope"></i> aiexxplorer@artificialuniverse.tech
                 </a></li>
                 <li class="nav-item mb-2"><a href="https://github.com/AIEXXPLERERR/opus-converter/issues" target="_blank" class="nav-link p-0 text-muted">
                     <i class="bi bi-question-circle"></i> Suporte
@@ -55,7 +55,7 @@
     
     <div class="d-flex justify-content-between align-items-center mt-4 pt-3 border-top">
         <p class="text-muted">
-            Copyright &copy; 2025 Wagner Rafael | AIEXXPLERERR &trade;
+            Copyright &copy; 2025 Wagner Rafael | AIExxplorer &trade;
         </p>
         <p class="text-muted">
             <a href="{{ url_for('static', filename='LICENSE') }}" target="_blank" class="text-decoration-none text-muted">Licença MIT</a>
